--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,11 @@
 	<title>hello coursera</title>
 </head>
 <body>
-	<h1>Hello Coursera, tolle Sache</h1>
+	<h1>Hello Coursera, tolle Sache. Ja wirklich.</h1>
+	<h2>Kleine Zwischenüberschrift</h2>
+	<h3>Noch eine Zwischenüberschrift</h3>
+	<br><br>
+	<p>Hallo Hallo Hallo</p>
 
 </body>
 </html>
