--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 	<h2>Kleine Zwischenüberschrift</h2>
 	<h3>Noch eine Zwischenüberschrift</h3>
 	<br><br>
-	<p>Hallo Hallo Hallo</p>
+	<p>Hallo Hallo Hallo du kleiner Hampelmann</p>
 
 </body>
 </html>
